# youtube-transcript-automation

./: README.md  app.py  docker-compose.yaml  dockerfile  pyproject.toml
workflows/: Youtube_Summary.json
