[project]
name = "youtube-transcript"
version = "0.1.0"
description = ""
authors = [
    {name = "Subi pra Nuvem",email = "subipranuvembr@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi[standard] (>=0.115.11,<0.116.0)",
    "youtube-transcript-api (>=0.6.3,<0.7.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"